agregado string-array de prueba

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,70 @@
         <item>Uranus</item>
         <item>Neptune</item>
     </string-array>
+
+    <string-array name="lastName">
+        <item>Sun</item>
+        <item>Mercury</item>
+        <item>Venus</item>
+        <item>Earth</item>
+        <item>Mars</item>
+        <item>Jupiter</item>
+        <item>Saturn</item>
+        <item>Uranus</item>
+        <item>Neptune</item>
+        <item>Sun</item>
+        <item>Mercury</item>
+        <item>Venus</item>
+        <item>Earth</item>
+        <item>Mars</item>
+        <item>Jupiter</item>
+        <item>Saturn</item>
+        <item>Uranus</item>
+        <item>Neptune</item>
+    </string-array>
+
+    <string-array name="number">
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+        <item>76789000</item>
+
+    </string-array>
+
+    <string-array name="image">
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+        <item>@drawable/mercury</item>
+    </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
