--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="space"> </string>
     <string name="share_contact">Share contact</string>
+    <string name="contacts">Contacts</string>
 </resources>
