--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,93 +1,14 @@
 <resources>
     <string name="app_name">Contacts</string>
-
-    <string-array name="firstName">
-        <item>Karla</item>
-        <item>Mercury</item>
-        <item>Karla</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
-        <item>Sun</item>
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
-    </string-array>
-
-    <string-array name="lastName">
-        <item>Cruz</item>
-        <item>Mercury</item>
-        <item>Cruz</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
-        <item>Sun</item>
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
-    </string-array>
-
-    <string-array name="number">
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-
-    </string-array>
-
-    <string-array name="image">
-        <item>@drawable/cara</item>
-        <item>@drawable/cara</item>
-        <item>@drawable/cara</item>
-        <item>@drawable/cara</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-    </string-array>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="space"> </string>
     <string name="share_contact">Share contact</string>
     <string name="contacts">Contacts</string>
+    <string name="favorites">Favorites</string>
+    <string name="menu_email">Email</string>
+    <string name="add_favr">Agregado a Favoritos</string>
+    <string name="remove_favr">Eliminado de Favoritos</string>
+    <string name="no_favorites_items">Sin Favoritos</string>
+    <string name="no_favorites_msg">Mantén presionado un item para agregarlo a favoritos.</string>
+    <string name="favorites_remove_msg">Mantén presionado un item para agregarlo a favoritos.</string>
+    <string name="Search">Search</string>
+    <string name="add_contact">Add contact</string>
 </resources>
