--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,93 +1,38 @@
 <resources>
     <string name="app_name">Contacts</string>
+    <string name="favorites">Favorites</string>
+    <string name="share_contact">Share Contact</string>
+    <string name="add_favr">Added to Favorites</string>
+    <string name="remove_favr">Deleted from Favorites</string>
+    <string name="no_favorites_items">No favorites</string>
+    <string name="no_favorites_msg">Keep pressed an item to add it to favorites.</string>
+    <string name="favorites_remove_msg">Keep pressed an item to remove from favorites.</string>
+    <string name="add_contact">Add Contact</string>
+    <string name="import_contact">Import</string>
+    <string name="error_permission_read_contacts">Contacts access is required to show our custom phone book</string>
+    <string name="error_permission_call_phone">Make call access is required so you do not have to leave the app</string>
+    <string name="action_dismiss">Dismiss</string>
+    <string name="action_enable_in_settings">Enable in settings</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
+    <string name="done">Done</string>
+    <string name="new_contact">New Contact</string>
+    <string name="no_contact">No contacts added</string>
+    <string name="pick_date">Pick a date</string>
 
-    <string-array name="firstName">
-        <item>Karla</item>
-        <item>Mercury</item>
-        <item>Karla</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
-        <item>Sun</item>
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
+    <string-array name="phone_options_array">
+        <item>Mobile</item>
+        <item>Home</item>
+        <item>Work</item>
+        <item>Work Fax</item>
+        <item>Home fax</item>
+        <item>Biper</item>
+        <item>Other</item>
     </string-array>
-
-    <string-array name="lastName">
-        <item>Cruz</item>
-        <item>Mercury</item>
-        <item>Cruz</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
-        <item>Sun</item>
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
+    <string-array name="email_options_array">
+        <item>Home</item>
+        <item>Work</item>
+        <item>Other</item>
+        <item>Mobile</item>
     </string-array>
-
-    <string-array name="number">
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-        <item>76789000</item>
-
-    </string-array>
-
-    <string-array name="image">
-        <item>@drawable/cara</item>
-        <item>@drawable/cara</item>
-        <item>@drawable/cara</item>
-        <item>@drawable/cara</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-        <item>@drawable/mercury</item>
-    </string-array>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="space"> </string>
-    <string name="share_contact">Share contact</string>
-    <string name="contacts">Contacts</string>
 </resources>
